hw3/error.txt
oneLayer.java:21: error: incompatible types: String cannot be converted to Vector<Double>
		ArrayList<Instance1> trainingSet=getData(args[3]);
		                                             ^
oneLayer.java:32: error: cannot find symbol
		Double [][] outputWeights=new Double[trainingSet.get(0).classValues.size()][];
		                                                       ^
  symbol:   variable classValues
  location: class Instance1
oneLayer.java:52: error: incompatible types: String cannot be converted to Vector<Double>
		ArrayList<Instance1> testSet=getData(args[4]);
		                                         ^
oneLayer.java:63: error: cannot find symbol
			for (int j=0; j < testSet.get(i).classValues.size(); j++) {
			                                ^
  symbol:   variable classValues
  location: class Instance1
oneLayer.java:64: error: cannot find symbol
				if (testSet.get(i).classValues.get(j) > 0.5)
				                  ^
  symbol:   variable classValues
  location: class Instance1
oneLayer.java:87: error: incompatible types: Double cannot be converted to Vector<Double>
		for(Vector<Double> featureVector: featureVectors)
		                                  ^
oneLayer.java:90: error: incompatible types: Double cannot be converted to Vector<Double>
			for(Vector <Double> attribute : featureVector)
			                                ^
oneLayer.java:93: error: incomparable types: Vector<Double> and Double
				if(attribute == featureVector.lastElement())
				             ^
oneLayer.java:95: error: incompatible types: Vector<Double> cannot be converted to int
					inst.classValue = (int)(attribute);
					                       ^
oneLayer.java:99: error: no suitable method found for add(Vector<Double>)
				inst.attributes.add(attribute);
				               ^
    method Collection.add(Double) is not applicable
      (argument mismatch; Vector<Double> cannot be converted to Double)
    method List.add(Double) is not applicable
      (argument mismatch; Vector<Double> cannot be converted to Double)
    method AbstractCollection.add(Double) is not applicable
      (argument mismatch; Vector<Double> cannot be converted to Double)
    method AbstractList.add(Double) is not applicable
      (argument mismatch; Vector<Double> cannot be converted to Double)
    method ArrayList.add(Double) is not applicable
      (argument mismatch; Vector<Double> cannot be converted to Double)
oneLayer.java:434: error: cannot find symbol
		classValues=new Integer();
		^
  symbol:   variable classValues
  location: class Instance1
oneLayer.java:434: error: no suitable constructor found for Integer(no arguments)
		classValues=new Integer();
		            ^
    constructor Integer.Integer(int) is not applicable
      (actual and formal argument lists differ in length)
    constructor Integer.Integer(String) is not applicable
      (actual and formal argument lists differ in length)
oneLayer.java:166: error: cannot find symbol
		int outputNodeCount = trainingSet.get(0).classValues.size();
		                                        ^
  symbol:   variable classValues
  location: class Instance1
oneLayer.java:258: error: cannot find symbol
					double TO = inst.classValues.get(j) - outputNodes.get(j).getOutput();
					                ^
  symbol:   variable classValues
  location: variable inst of type Instance1
oneLayer.java:279: error: cannot find symbol
							double TO = inst.classValues.get(this.outputNodes.indexOf(output)) - output.getOutput();
							                ^
  symbol:   variable classValues
  location: variable inst of type Instance1
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
15 errors
